--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
-body {
-    font-family: 'Yeseva One', cursive;
+* {
+
     margin: 0;
     padding: 0;
+}
 
+body {
+    font-family: 'Yeseva One', cursive;
+
+}
+
+p {
+    line-height: 2rem;
+}
+
+h1 {
+    margin-bottom: 3%;
 }
 
 .header-section {
@@ -28,6 +40,7 @@ span {
 
 .header-div h1 {
     font-size: 50px;
+
 }
 
 
@@ -35,7 +48,6 @@ span {
     margin: 0;
     font-size: 1.2rem;
     justify-content: center;
-
     opacity: 0.8;
 }
 
@@ -50,7 +62,7 @@ span {
     color: black
 }
 
-.donate-now {
+.donate-now-section {
 
     height: 660px;
 
@@ -67,31 +79,138 @@ span {
     font-size: 2rem;
     font-weight: bold;
 
+
 }
 
 #btn-two {
     border: 3px solid rgb(162, 245, 169);
     background-color: rgb(230, 252, 243);
     color: rgb(49, 243, 65);
+
 }
 
 #other-amount {
     top: 100px;
     position: relative;
-    opacity: 0.4;
+
+}
+
+input {
+    border: none;
+    text-align: center;
     font-size: 1.2rem;
 
 }
 
 hr {
-    width: 50%;
-    color: black;
+    margin: 20px 210px 30px 210px;
+
+    vertical-align: middle;
 
 }
 
-.three-donate-plan {
+.our-donate-plan-section {
+    margin-top: -50px;
+}
+
+.donate-plan {
     display: flex;
-    width: 50%;
+    margin: 100px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.card {
+    width: 320px;
+    height: 340px;
+    border: none;
+    border-radius: 5px;
+    text-align: left;
     padding: 20px;
-    border: 1px solid black;
+    margin-top: -50px;
+
+}
+
+.card h3 {
+    padding-bottom: 40px;
+}
+
+.card img {
+    padding-bottom: 40px;
+}
+
+.card p {
+    font-weight: lighter;
+
+}
+
+
+.card1 {
+    background-color: rgb(222, 245, 237);
+}
+
+.card2 {
+    background-color: rgb(241, 237, 238);
+}
+
+.card3 {
+    background-color: rgb(252, 240, 227);
+}
+
+.happening-now {
+    text-align: center;
+
+}
+
+#fund-collection {
+    padding-bottom: 20px;
+    font-size: 2rem;
+}
+
+.card4 {
+    background-color: white;
+    box-shadow: 1px 8px 5px rgb(156, 243, 166);
+    height: 250px;
+
+}
+
+.card5 {
+    background-color: white;
+    box-shadow: 1px 8px 5px rgb(156, 243, 166);
+    height: 250px;
+}
+
+
+
+footer {
+
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 50px;
+
+}
+
+.get-my-updates {
+    text-align: center;
+}
+
+.update-div {
+    margin: 10px 200px 30px 200px;
+    background-color: rgb(247, 189, 179);
+    height: 150px;
+    text-align: center;
+    display: flex;
+}
+
+#email {
+    padding: 10px 15px;
+    margin-top: 40px;
+    background-color: rgb(228, 224, 224);
+    border-radius: 5px;
+    text-align: left;
+}
+
+footer h4 {
+    color: rgb(49, 243, 65);
 }
